# sharpline

./: .env.example  .gitattributes  .gitignore  README.md  dash.json  docker-compose.yml  event_detail.json  start.bat  vercel.json
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_fix_bookmaker_keys.py  0003_sports_is_available.py  0004_disable_auto_bookmakers.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/adapters/: base.py  odds_theoddsapi.py  weather_openweathermap.py
backend/app/adapters/lineups/: espn.py  nrl.py  squiggle.py
backend/app/api/: admin.py  routes_dashboard.py  routes_events.py  routes_sports.py  routes_status.py  ws.py
backend/app/data/: teams_seed.py  venues.py
backend/app/services/: devig.py  lineup_merge.py  model.py  normalise.py  publisher.py  quota.py  rationale.py  recompute.py  weather_service.py
backend/app/tasks/: beat_schedule.py  celery_app.py  poll_lineups.py  poll_odds.py  poll_weather.py  recompute.py
backend/scripts/: demo_model.py  live_poll_once.py  seed.py  verify_phase7.py
backend/tests/: test_lineups.py  test_model.py  test_normalise.py  test_quota.py  test_weather.py
backend/tests/fixtures/: odds_afl.json  odds_mlb.json  odds_nrl.json
frontend/: .env.production  index.html  package-lock.json  package.json  playwright.config.ts  shots_prod.mjs  shots_v2.mjs  shots_v2_game.mjs  shots_ws.mjs  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
recon/: RECON.md  (+5 more)
(+50 files in other folders)
